
Changes in JMurmel-1.4 relative to JMurmel-1.3.1

 * removed the undocumented function "fatal" from Murmel,
   moved the function "error" from mlib to Murmel and now it is similar to CL's "error"

 * added the functions "read-from-string", "write-to-string"
 * added the functions "read-textfile-lines", "read-textfile", "write-textfile-lines", "write-textfile"
 * added the special form "try" and the function "typep"
 * added condition types, the global variable *condition-handler* and some condition handling
 * added hash-tables

 * mlib: added the functions parse, parse-integer, min, max,
   string-replace, string-split, string-join
 * mlib: added gethash, remhash, maphash, "(setf (gethash..."


Changes in JMurmel-1.3.1 relative to JMurmel-1.3
released: 2022-12-04

 * fixed cmdline parameter -XX-dyn and various other feature-flags


Changes in JMurmel-1.3 relative to JMurmel-1.2.2
released: 2022-11-12

 * changed car and cdr so that they are no longer defined for symbols, i.e. (car 'aaa)
   now is an error.
 * changed the evaluator of the interpreter so that lists whose car is 'lambda' are
   no longer valid functions. e.g.
     (apply '(lambda (a b) (+ a b)) '(1 2))
   no longer works but gives an error.
   Old behaviour can be restored by the commandline flag '--XX-oldlambda' (interpreter only).
 * changed self-recursive invocations from late binding to early binding
 * changed fixnums from 64 bit to 54 bit (53 bits + 1 sign bit)
 * changed internal-time-units-per-second to integer
 * changed write, writeln, lnwrite to return the first argument (was: t)
 * changed read to throw an error on EOF unless a new optional argument was given

 * added the global variables "most-positive-fixnum" and "most-negative-fixnum"
 * added the special operators catch, throw and unwind-protect
 * added functionp
 * added simple-string-p
 * added vector support:
   * make-array, array-dimension-limit, adjustable-array-p