@@ -2260,3 +2260,5 @@ nil
  -> nil
 -> ist im interpreter UND compiler falsch
    interpreter und compiler resetten values zwischen forms, aber nicht bei nested forms
+
+equal von mlib nach murmel schieben, damit man hashmaps mit strings machen kann #H(equal "eins" 1 "zwei" 2)
