@@ -39,7 +39,6 @@ mlib provides the following Common Lisp-like functions and macros:
 - numbers, characters
     - [abs](#function-abs), [min](#function-min), [max](#function-max), [zerop](#function-zerop), [evenp](#function-evenp), [oddp](#function-oddp)
     - [char=](#function-char), [char](#function-char-1), [bit](#function-bit)
-    - [equal](#function-equal)
     - [parse](#function-parse), [parse-integer](#function-parse-integer)
 - sequences
     - [elt](#function-elt), [copy-seq](#function-copy-seq), [length](#function-length)
@@ -589,18 +588,6 @@ Return the n-th character of the string `str`, `n` is 0-based.
 Since: 1.3
 
 Return the n-th bit of the bitvector `bv`, `n` is 0-based.
-
-### Function: equal
-    (equal a b) -> boolean
-
-Since: 1.1
-
-Return `t` if any of the following is true:
-
-- `a` and `b` are `eql`
-- `a` and `b` are strings that have the same text value
-- `a` and `b` are bitvectors whose elements are eql
-- `a` and `b` are conses whose car and cdr are `equal` respectively
 
 ### Function: parse
     (parse result-type str [eof-obj [start [end]]]) -> result
