@@ -3,6 +3,7 @@ Changes in JMurmel-1.4 relative to JMurmel-1.3.1
 
  * removed the undocumented function "fatal" from Murmel,
    moved the function "error" from mlib to Murmel and now it is similar to CL's "error"
+ * moved "equal" from mlib to Murmel
 
  * added the functions "read-from-string", "write-to-string"
  * added the functions "read-textfile-lines", "read-textfile", "write-textfile-lines", "write-textfile"
